Update google form and footer index.html

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 					</section>
 		        <!-- My Google contact form -->
 		       <div id="contact">
-		       	 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdNtkRzHqoc9aF1eT9FYmQkol8t1fwUlYxLoNCsL5Nudeonvw/viewform?embedded=true" width="1000" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+		       	 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdNtkRzHqoc9aF1eT9FYmQkol8t1fwUlYxLoNCsL5Nudeonvw/viewform?embedded=true" width="800" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
              </div>
 	        </div>
 
@@ -150,7 +150,7 @@
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Untitled. All rights reserved.</li>
 					</ul>
 
 			</div>
