--- a/index.html
+++ b/index.html
@@ -80,43 +80,49 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/fga1.jpeg"assets/images/ alt="" /></a>
+										<a href="https://redcoding93.github.io/fga-prework-assessment/" class="image fit"><img src="images/fga1.jpeg"assets/images/ alt="" /></a>
 										<header>
 											<h3>E-Commerce Website</h3>
+											<h3> Coding language used: HTML and CSS</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://redcoding93.github.io/fga-prework-assessment/" class="image fit"><img src="images/shay_screen.jpeg" alt="" /></a>
+										<a href="https://redcoding93.github.io/html-and-css-101/" class="image fit"><img src="images/shay_screen.jpeg" alt="" /></a>
 										<header>
 											<h3>Shay Howe</h3>
+											<h3> Coding language used: HTML and CSS</h3>
 										</header>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/rock_screen.jpeg" alt="" /></a>
+										<a href="https://redcoding93.github.io/Rock-Paper-Scissors-Game/" class="image fit"><img src="images/rock_screen.jpeg" alt="" /></a>
 										<header>
 											<h3>Rock, Paper, Scissors</h3>
+											<h3> Coding language used: JavaScript</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/irock.jpeg" alt="" /></a>
+										<a href="https://redcoding93.github.io/irock-JS-project/" class="image fit"><img src="images/irock.jpeg" alt="" /></a>
 										<header>
 											<h3>iRock Project</h3>
+											<h3> Coding language used: JavaScript</h3>
 										</header>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="Upcoming" /></a>
+										<a href="https://repl.it/@redcoding93/Song-Time-Calculator-Final" class="image fit"><img src="images/songs_screen.jpg" alt="Song time calculator" /></a>
 										<header>
-											<h3>C# Calculator (upcoming)</h3>
+											<h3>Song time Calculator </h3>
+											<h3> Coding language used: Ruby</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="Upcoming" /></a>
 										<header>
-											<h3>C# Tournament Tracker (upcoming)</h3>
+											<h3>C# Calculator (upcoming)</h3>
+											<h3> Coding language used: C#</h3>
 										</header>
 									</article>
 								</div>
