update song time image file name index.html

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://repl.it/@redcoding93/Song-Time-Calculator-Final" class="image fit"><img src="images/songs_screen.jpg" alt="" /></a>
+										<a href="https://repl.it/@redcoding93/Song-Time-Calculator-Final" class="image fit"><img src="images/songs_screen.jpeg" alt="" /></a>
 										<header>
 											<h3>Song time Calculator </h3>
 											<h3> Coding language used: Ruby</h3>
