--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="https://twitter.com/redfighter93" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.facebook.com/vanessa.n.ingram" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://github.com/redcoding93" class="icon brands fa-github"><span class="label">Github</span></a></li>
 							<li><a href="https://dribbble.com/redcoder93?onboarding=true" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="mailto: vingram15@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://www.linkedin.com/in/vanessa-nicole-ingram-6b405866/" class="icon solid fa-linkedin"><span class="label">linkedin</span></a></li>
 						</ul>
 
 				</div>
