--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
 
 					<!-- Nav -->
 						<nav id="nav">
-							<ul>
-								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
-								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
-								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
-							</ul>
+						   <ul class="icons">
+						     <li><a href="https://www.facebook.com/vanessa.n.ingram" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
+						     <li><a href="https://github.com/redcoding93" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
+						     <li><a href="https://dribbble.com/redcoder93?onboarding=true" class="icon brands fa-dribbble" target="_blank"><span class="label">Dribbble</span></a></li>
+						     <li><a href="mailto: vingram15@gmail.com" class="icon solid fa-envelope" target="_blank"><span class="label">Email</span></a></li>
+						     <li><i class="linkedin-icon fa fa-linkedin-square" target="_blank"><span class="label"></span></i></a></li>
+						   </ul>
 						</nav>
 
 				</div>
