--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE HTML> 
 
 <html>
 	<head>
@@ -6,7 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-                <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	</head>
 	<body class="is-preload">
 
@@ -24,13 +24,12 @@
 
 					<!-- Nav -->
 						<nav id="nav">
-						   <ul class="icons">
-						     <li><a href="https://www.facebook.com/vanessa.n.ingram" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
-						     <li><a href="https://github.com/redcoding93" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
-						     <li><a href="https://dribbble.com/redcoder93?onboarding=true" class="icon brands fa-dribbble" target="_blank"><span class="label">Dribbble</span></a></li>
-						     <li><a href="mailto: vingram15@gmail.com" class="icon solid fa-envelope" target="_blank"><span class="label">Email</span></a></li>
-						     <li><i class="linkedin-icon fa fa-linkedin-square" target="_blank"><span class="label"></span></i></a></li>
-						   </ul>
+							<ul>
+								<li><a href="#top" id="top-link"><span class="icon solid fa-home">Intro</span></a></li>
+								<li><a href="#portfolio" id="portfolio-link"><span class="icon solid fa-th">Portfolio</span></a></li>
+								<li><a href="#about" id="about-link"><span class="icon solid fa-user">About Me</span></a></li>
+								<li><a href="#contact" id="contact-link"><span class="icon solid fa-envelope">Contact</span></a></li>
+							</ul> 
 						</nav>
 
 				</div>
@@ -39,11 +38,11 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="https://www.facebook.com/vanessa.n.ingram" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="https://github.com/redcoding93" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="https://dribbble.com/redcoder93?onboarding=true" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="mailto: vingram15@gmail.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
-							<li><a href="https://www.linkedin.com/in/vanessa-nicole-ingram-6b405866/" class="icon solid fa-linkedin"><span class="label">linkedin</span></a></li>
+							<li><a href="https://www.facebook.com/vanessa.n.ingram" class="icon brands fa-facebook-f" target="_blank"><span class="label">Facebook</span></a></li>
+							<li><a href="https://github.com/redcoding93" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
+							<li><a href="https://dribbble.com/redcoder93?onboarding=true" class="icon brands fa-dribbble" target="_blank"><span class="label">Dribbble</span></a></li>
+							<li><a href="mailto: vingram15@gmail.com" class="icon solid fa-envelope" target="_blank"><span class="label">Email</span></a></li>
+							<li><i class="linkedin-icon fa fa-linkedin-square" target="_blank"><span class="label"></span></i></a></li>
 						</ul>
 
 				</div>
@@ -82,49 +81,43 @@
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://redcoding93.github.io/fga-prework-assessment/" class="image fit"><img src="images/fga1.jpeg"assets/images/ alt="" /></a>
+										<a href="#" class="image fit"><img src="images/fga1.jpeg"assets/images/ alt="" /></a>
 										<header>
 											<h3>E-Commerce Website</h3>
-											<h3> Coding language used: HTML and CSS</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://redcoding93.github.io/html-and-css-101/" class="image fit"><img src="images/shay_screen.jpeg" alt="" /></a>
+										<a href="https://redcoding93.github.io/fga-prework-assessment/" class="image fit"><img src="images/shay_screen.jpeg" alt="" /></a>
 										<header>
 											<h3>Shay Howe</h3>
-											<h4> Coding language used: HTML and CSS</h4>
 										</header>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://redcoding93.github.io/Rock-Paper-Scissors-Game/" class="image fit"><img src="images/rock_screen.jpeg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/rock_screen.jpeg" alt="" /></a>
 										<header>
 											<h3>Rock, Paper, Scissors</h3>
-											<h4> Coding language used: JavaScript</h4>
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://redcoding93.github.io/irock-JS-project/" class="image fit"><img src="images/irock.jpeg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/irock.jpeg" alt="" /></a>
 										<header>
 											<h3>iRock Project</h3>
-											<h4> Coding language used: JavaScript</h4>
 										</header>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://repl.it/@redcoding93/Song-Time-Calculator-Final" class="image fit"><img src="images/songs_screen.jpeg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="Upcoming" /></a>
 										<header>
-											<h3>Song time Calculator </h3>
-											<h4> Coding language used: Ruby</h4>
+											<h3>C# Calculator (upcoming)</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="Upcoming" /></a>
 										<header>
-											<h3>C# Calculator (upcoming)</h3>
-											<h4> Coding language used: C#</h4>
+											<h3>C# Tournament Tracker (upcoming)</h3>
 										</header>
 									</article>
 								</div>
@@ -147,18 +140,24 @@
 
 						</div>
 					</section>
+
+				
+
+
 		        <!-- My Google contact form -->
 		       <div id="contact">
-		       	 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdNtkRzHqoc9aF1eT9FYmQkol8t1fwUlYxLoNCsL5Nudeonvw/viewform?embedded=true" width="800" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-             </div>
-	        </div>
+		         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdNtkRzHqoc9aF1eT9FYmQkol8t1fwUlYxLoNCsL5Nudeonvw/viewform?embedded=true" width="1000" height="809" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+                </div>
+		
+
+	    </div>
 
 		<!-- Footer -->
 			<div id="footer">
 
 				<!-- Copyright -->
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li>
+						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 
 			</div>
