--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
 							<header>
 								<h2>Hi, I'm Vanessa</h2>
-								<p>I am a dedicated and passionate team player who has experience in journalism and web development with an emphasis in media, front-end development, WordPress development, UX Design, capacity building and sustainability. </p>
+								<p>I am passionate team player who has excellent personal development skills as I have earned experience in journalism and web development with an emphasis in media, front-end development, WordPress development, UX Design, capacity building and sustainability. I have dedicated myself to a career as an independent programmer who is constantly reading, building and learning about new programming languages and advancements within the tech field which is shown in my portfolio website and in many of the amazing roles that I have experienced.</p>
 							</header>
 
 							<footer>
@@ -76,7 +76,12 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>I am a dedicated independent programmer who is constantly reading, building and learning about new programming languages and advancements within the tech field.</p>
+							<p>I am passionate team player who has excellent personal development skills as I have earned 
+							experience in journalism and web development with an emphasis in media, front-end development, 
+							WordPress development, UX Design, capacity building and sustainability. I have dedicated myself
+							to a career as an independent programmer who is constantly reading, building and learning about
+							new programming languages and advancements within the tech field which is shown in my portfolio
+							website and in many of the amazing roles that I have experienced. </p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
@@ -136,7 +141,9 @@
 
 							<a href="#" class="image featured"><img src="images/software_developer.jpeg" alt="" /></a>
 
-							<p>I believe that everyone's voices should be heard and that technology can be used to make a positive impact on society and can serve as a platform to facilitate the diverse voice and will of the people. </p>
+							<p>When I begin a new journey, my goals are guided by a belief that everyone's voices should be
+							heard and that technology can be used to make a positive impact on society and can serve as a
+							platform to facilitate the diverse voice and will of the people.</p>
 
 						</div>
 					</section>
