Update second bio section index.html

--- a/index.html
+++ b/index.html
@@ -76,12 +76,9 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>I am passionate team player who has excellent personal development skills as I have earned 
-							experience in journalism and web development with an emphasis in media, front-end development, 
-							WordPress development, UX Design, capacity building and sustainability. I have dedicated myself
-							to a career as an independent programmer who is constantly reading, building and learning about
-							new programming languages and advancements within the tech field which is shown in my portfolio
-							website and in many of the amazing roles that I have experienced. </p>
+							<p>When I begin a new journey, my goals are guided by a belief that everyone's voices should be
+							heard and that technology can be used to make a positive impact on society and can serve as a
+							platform to facilitate the diverse voice and will of the people. </p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
