Add calculator project and change projects section

--- a/index.html
+++ b/index.html
@@ -103,13 +103,13 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/rock_screen.jpeg" alt="" /></a>
+										<a href="https://redcoding93.github.io/Rock-Paper-Scissors-Game/" class="image fit"><img src="images/rock_screen.jpeg" alt="" /></a>
 										<header>
 											<h3>Rock, Paper, Scissors</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/irock.jpeg" alt="" /></a>
+										<a href="https://redcoding93.github.io/irock-JS-project/" class="image fit"><img src="images/irock.jpeg" alt="" /></a>
 										<header>
 											<h3>iRock Project</h3>
 										</header>
@@ -117,11 +117,12 @@
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="Upcoming" /></a>
-										<header>
-											<h3>C# Calculator (upcoming)</h3>
-										</header>
+									<a href="https://redcoding93.github.io/fga-prework-assessment/" class="image fit"><img src="images/shay_screen.jpeg" alt="" /></a>
+									  <header>
+									    <h3>Shay Howe</h3>
+									  </header>
 									</article>
+
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="Upcoming" /></a>
 										<header>
