--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML> 
+<!DOCTYPE HTML>  
 
 <html>
 	<head>
@@ -55,15 +55,9 @@
 				<!-- Intro -->
 					<section id="top" class="one dark cover">
 						<div class="container">
-
 							<header>
-								<h2>Hi, I'm Vanessa!</h2>
-								<p>I am passionate team player who has excellent personal development skills as I have earned 
-							experience in journalism and web development with an emphasis in media, front-end development, 
-							WordPress development, UX Design, capacity building and sustainability. When I begin a new journey,
-							my goals are guided by a belief that everyone's voices should be heard and that technology can be
-							used to make a positive impact on society and can serve as a platform to facilitate the diverse
-							voice and will of the people. </p>
+							<p>I have dedicated myself to a career as an independent programmer who is constantly reading, building and learning about new programming languages and advancements within the tech field which is shown in my portfolio website and in many of the amazing roles that I have experienced.
+							</p>
 							</header>
 
 							<footer>
@@ -81,52 +75,57 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>I have dedicated myself to a career as an independent programmer who is constantly reading, 
-							building and learning about new programming languages and advancements within the tech field 
-							which is shown in my portfolio website and in many of the amazing roles that I have experienced.
-							</p>
+							<p>When I begin a new journey, my goals are guided by a belief that everyone's voices should be heard and that technology can be used to make a positive impact on society and can serve as a platform to facilitate the diverse voice and will of the people.</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/fga1.jpeg"assets/images/ alt="" /></a>
+										<a href="#" class="image fit"><img src="images/fga1.jpeg" target="_blank" alt="" /></a>
 										<header>
 											<h3>E-Commerce Website</h3>
+											<h3>Programming langauges: <br> HTML, CSS</h3>
 										</header>
 									</article>
-									<article class="item">
-										<a href="https://redcoding93.github.io/fga-prework-assessment/" class="image fit"><img src="images/shay_screen.jpeg" alt="" /></a>
+								    <article class="item">
+										<a href="https://vanessascalculator.netlify.app/" target="_blank"  class="image fit"><img src="images/calculator_app.jpeg" alt="Calculator app" /></a>
 										<header>
-											<h3>Shay Howe</h3>
+											<h3>My Calculator app</h3>
+											<h3>Programming langauges: <br> HTML, CSS, JavaScript</h3>
 										</header>
 									</article>
 								</div>
+
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="https://redcoding93.github.io/Rock-Paper-Scissors-Game/" class="image fit"><img src="images/rock_screen.jpeg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/rock_screen.jpeg" target="_blank"  alt="" /></a>
 										<header>
 											<h3>Rock, Paper, Scissors</h3>
+											<h3>Programming langauges: <br> HTML, CSS, JavaScript</h3>
 										</header>
 									</article>
 									<article class="item">
-										<a href="https://redcoding93.github.io/irock-JS-project/" class="image fit"><img src="images/irock.jpeg" alt="" /></a>
+										<a href="https://redcoding93.github.io/fga-prework-assessment/" class="image fit"><img src="images/shay_screen.jpeg" target="_blank" alt="" /></a>
 										<header>
-											<h3>iRock Project</h3>
+											<h3>Shay Howe</h3>
+											<h3>Programming langauges: <br> HTML, CSS</h3>
 										</header>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
-									<article class="item">
-									<a href="https://redcoding93.github.io/fga-prework-assessment/" class="image fit"><img src="images/shay_screen.jpeg" alt="" /></a>
-									  <header>
-									    <h3>Shay Howe</h3>
-									  </header>
-									</article>
 
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="Upcoming" /></a>
+										<article class="item">
+										<a href="#" class="image fit"><img src="images/irock.jpeg" target="_blank" alt="" /></a>
 										<header>
-											<h3>C# Tournament Tracker (upcoming)</h3>
+											<h3>iRock Project</h3>
+											<h3>Programming langauges: <br> HTML, CSS, JavaScript</h3>
+										</header>
+									</article>
+									</article>
+									<article class="item">
+										<a href="#" class="image fit"><img src="images/pic07.jpg" target="_blank"  alt="Upcoming" /></a>
+										<header>
+											<h3>To-do list (upcoming)</h3>
+ 											<h3>Programming langauges: <br> HTML, CSS, JavaScript</h3>
 										</header>
 									</article>
 								</div>
@@ -145,9 +144,7 @@
 
 							<a href="#" class="image featured"><img src="images/software_developer.jpeg" alt="" /></a>
 
-							<p>When I begin a new journey, my goals are guided by a belief that everyone's voices should be
-							heard and that technology can be used to make a positive impact on society and can serve as a
-							platform to facilitate the diverse voice and will of the people.</p>
+							<p>I believe that everyone's voices should be heard and that technology can be used to make a positive impact on society and can serve as a platform to facilitate the diverse voice and will of the people. </p>
 
 						</div>
 					</section>
@@ -157,7 +154,7 @@
 
 		        <!-- My Google contact form -->
 		       <div id="contact">
-		         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdNtkRzHqoc9aF1eT9FYmQkol8t1fwUlYxLoNCsL5Nudeonvw/viewform?embedded=true" width="1000" height="809" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+		         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdNtkRzHqoc9aF1eT9FYmQkol8t1fwUlYxLoNCsL5Nudeonvw/viewform?embedded=true" width="800" height="809" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
                 </div>
 		
 
