--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<li><a href="https://github.com/redcoding93" class="icon brands fa-github" target="_blank"><span class="label">Github</span></a></li>
 							<li><a href="https://dribbble.com/redcoder93?onboarding=true" class="icon brands fa-dribbble" target="_blank"><span class="label">Dribbble</span></a></li>
 							<li><a href="mailto: vingram15@gmail.com" class="icon solid fa-envelope" target="_blank"><span class="label">Email</span></a></li>
-							<li><i class="linkedin-icon fa fa-linkedin-square" target="_blank"><span class="label"></span></i></a></li>
+							<li><a href="https://www.linkedin.com/in/vanessa-nicole-ingram-6b405866/" target="_blank"><i class="linkedin-icon fa fa-linkedin-square" target="_blank"><span class="label"></span></i></a></li>
 						</ul>
 
 				</div>
