Add clock to portfolio index.html

--- a/index.html
+++ b/index.html
@@ -97,30 +97,30 @@
 
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/rock_screen.jpeg" target="_blank"  alt="" /></a>
+										<a href="https://vanessasclock.netlify.app/" class="image fit"><img src="clock.jpeg" target="_blank"  alt="" /></a>
 										<header>
-											<h3>Rock, Paper, Scissors</h3>
-											<h3>Programming langauges: <br> HTML, CSS, JavaScript</h3>
+										   <h3>My Clock</h3>
+										   <h3>Programming langauges: <br> HTML, CSS, JavaScript</h3>
 										</header>
 									</article>
 									<article class="item">
 										<a href="https://redcoding93.github.io/fga-prework-assessment/" class="image fit"><img src="images/shay_screen.jpeg" target="_blank" alt="" /></a>
 										<header>
-											<h3>Shay Howe</h3>
-											<h3>Programming langauges: <br> HTML, CSS</h3>
+										   <h3>Shay Howe</h3>
+										   <h3>Programming langauges: <br> HTML, CSS</h3>
 										</header>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 
-										<article class="item">
-										<a href="#" class="image fit"><img src="images/irock.jpeg" target="_blank" alt="" /></a>
-										<header>
-											<h3>iRock Project</h3>
-											<h3>Programming langauges: <br> HTML, CSS, JavaScript</h3>
-										</header>
+									<article class="item">
+									<a href="https://redcoding93.github.io/Rock-Paper-Scissors-Game/" class="image fit"><img src="images/rock_screen.jpeg" target="_blank" alt="" /></a>
+									  <header>
+									      <h3>Rock, Paper, Scissors</h3>
+									      <h3>Programming langauges: <br> HTML, CSS, JavaScript</h3>
+								          </header>
 									</article>
-									</article>
+								
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic07.jpg" target="_blank"  alt="Upcoming" /></a>
 										<header>
@@ -155,7 +155,7 @@
 		        <!-- My Google contact form -->
 		       <div id="contact">
 		         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdNtkRzHqoc9aF1eT9FYmQkol8t1fwUlYxLoNCsL5Nudeonvw/viewform?embedded=true" width="800" height="809" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-                </div>
+                       </div>
 		
 
 	    </div>
