--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>  
+<!DOCTYPE HTML> 
 
 <html>
 	<head>
@@ -78,32 +78,19 @@
 							<p>When I begin a new journey, my goals are guided by a belief that everyone's voices should be heard and that technology can be used to make a positive impact on society and can serve as a platform to facilitate the diverse voice and will of the people.</p>
 
 							<div class="row">
-								<div class="col-4 col-12-mobile">
+
+								<div class="col-4 col-12-mobile"> 
 									<article class="item">
-										<a href="https://redcoding93.github.io/fga-prework-assessment/" class="image fit"><img src="images/fga1.jpeg" target="_blank" alt="" /></a>
+										<!-- Project 1 -->
+										<a href="#" class="image fit"><img src="images/fga1.jpeg" target="_blank" alt="" /></a>
 										<header>
 											<h3>E-Commerce Website</h3>
 											<h3>Programming langauges: <br> HTML, CSS</h3>
 										</header>
 									</article>
-								    <article class="item">
-										<a href="https://vanessascalculator.netlify.app/" target="_blank"  class="image fit"><img src="images/calculator_app.jpeg" alt="Calculator app" /></a>
-										<header>
-											<h3>My Calculator app</h3>
-											<h3>Programming langauges: <br> HTML, CSS, JavaScript</h3>
-										</header>
-									</article>
-								</div>
 
-								<div class="col-4 col-12-mobile">
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/rock_screen.jpeg" target="_blank"  alt="" /></a>
-										<header>
-											<h3>Rock, Paper, Scissors</h3>
-											<h3>Programming langauges: <br> HTML, CSS, JavaScript</h3>
-										</header>
-									</article>
-									<article class="item">
+								  <article class="item">
+										  <!-- Project 7 -->
 										<a href="https://redcoding93.github.io/fga-prework-assessment/" class="image fit"><img src="images/shay_screen.jpeg" target="_blank" alt="" /></a>
 										<header>
 											<h3>Shay Howe</h3>
@@ -111,53 +98,64 @@
 										</header>
 									</article>
 								</div>
+
 								<div class="col-4 col-12-mobile">
 
 										<article class="item">
-										<a href="#" class="image fit"><img src="images/irock.jpeg" target="_blank" alt="" /></a>
+										<a href="https://vanessasclock.netlify.app/" target="_blank"  class="image fit"><img src="images/clock.jpeg" alt="Calculator app" /></a>
+										  <header>
+											  <h3>My Clock app</h3>
+											  <h3>Programming langauges: <br> HTML, CSS, JavaScript</h3>
+										  </header>
+										</article>
+
+									  <article class="item">
+										<!-- Project 5 -->
+										<a href="#" class="image fit"><img src="images/pic07.jpg" target="_blank"  alt="Upcoming" /></a>
+										  <header>
+											  <h3>To-do list (upcoming)</h3>
+ 											  <h3>Programming langauges: <br> HTML, CSS, JavaScript</h3>
+										  </header>	
+								  	</article>
+								</div> 
+          <!-- 	 <article>
+									<a href="https://redcoding93.github.io/fga-prework-assessment/" class="image fit"><img src="images/shay_screen.jpeg" target="_blank" alt="" /></a>
 										<header>
-											<h3>iRock Project</h3>
+											<h3></h3>
+											<h3>Programming langauges: <br> </h3>
+										</header>
+								 </article> -->
+
+								<div class="col-4 col-12-mobile">
+
+									<article class="item">
+										<!-- Project 2 -->
+										<a href="https://vanessascalculator.netlify.app/" target="_blank"  class="image fit"><img src="images/calculator_app.jpeg" alt="Calculator app" /></a>
+										<header>
+											<h3>My Calculator app</h3>
 											<h3>Programming langauges: <br> HTML, CSS, JavaScript</h3>
 										</header>
 									</article>
-									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" target="_blank"  alt="Upcoming" /></a>
-										<header>
-											<h3>To-do list (upcoming)</h3>
- 											<h3>Programming langauges: <br> HTML, CSS, JavaScript</h3>
-										</header>
-									</article>
+
+
 								</div>
 							</div>
-
-						</div>
 					</section>
-
 				<!-- About Me -->
 					<section id="about" class="three">
 						<div class="container">
-
 							<header>
 								<h2>About Me</h2>
 							</header>
-
 							<a href="#" class="image featured"><img src="images/software_developer.jpeg" alt="" /></a>
-
 							<p>I believe that everyone's voices should be heard and that technology can be used to make a positive impact on society and can serve as a platform to facilitate the diverse voice and will of the people. </p>
-
 						</div>
 					</section>
+		      <!-- My Google contact form -->
 
-				
-
-
-		        <!-- My Google contact form -->
 		       <div id="contact">
-		         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdNtkRzHqoc9aF1eT9FYmQkol8t1fwUlYxLoNCsL5Nudeonvw/viewform?embedded=true" width="800" height="809" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-                </div>
-		
-
+		         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdNtkRzHqoc9aF1eT9FYmQkol8t1fwUlYxLoNCsL5Nudeonvw/viewform?embedded=true" width="1000" height="809" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+           </div>
 	    </div>
 
 		<!-- Footer -->
@@ -167,9 +165,7 @@
 					<ul class="copyright">
 						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
-
 			</div>
-
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
@@ -178,8 +174,6 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
-			<!-- Email script -->
-			<script src="form.js"></script>
-</script> 
+
 	</body>
 </html>
