Update portfolio links

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 								<div class="col-4 col-12-mobile"> 
 									<article class="item">
 										<!-- Project 1 -->
-										<a href="#" class="image fit"><img src="images/fga1.jpeg" target="_blank" alt="" /></a>
+										<a href="https://redcoding93.github.io/fga-prework-assessment/" class="image fit"><img src="images/fga1.jpeg" target="_blank" alt="" /></a>
 										<header>
 											<h3>E-Commerce Website</h3>
 											<h3>Programming langauges: <br> HTML, CSS</h3>
