--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 								<div class="col-4 col-12-mobile"> 
 									<article class="item">
 										<!-- Project 1 -->
-										<a href="https://redcoding93.github.io/fga-prework-assessment/" class="image fit"><img src="images/fga1.jpeg" target="_blank" alt="" /></a>
+										<a href="https://redcoding93.github.io/fga-prework-assessment/" target="_blank" class="image fit"><img src="images/fga1.jpeg" target="_blank" alt="" /></a>
 										<header>
 											<h3>E-Commerce Website</h3>
 											<h3>Programming langauges: <br> HTML, CSS</h3>
@@ -91,7 +91,7 @@
 
 								  <article class="item">
 										  <!-- Project 7 -->
-										<a href="https://redcoding93.github.io/fga-prework-assessment/" class="image fit"><img src="images/shay_screen.jpeg" target="_blank" alt="" /></a>
+										<a href="https://redcoding93.github.io/html-and-css-101/" class="image fit"><img src="images/shay_screen.jpeg" target="_blank" alt="" /></a>
 										<header>
 											<h3>Shay Howe</h3>
 											<h3>Programming langauges: <br> HTML, CSS</h3>
