--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
 								  <article class="item">
 										  <!-- Project 7 -->
-										<a href="https://redcoding93.github.io/html-and-css-101/" class="image fit"><img src="images/shay_screen.jpeg" target="_blank" alt="" /></a>
+										<a href="https://redcoding93.github.io/html-and-css-101/organizing_data_with_tables/index.html" class="image fit" target="_blank"><img src="images/shay_screen.jpeg" alt="" /></a>
 										<header>
 											<h3>Shay Howe</h3>
 											<h3>Programming langauges: <br> HTML, CSS</h3>
